crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_compat_qualified_names_310.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
import typing
import warnings
import typing_extensions

@typing_extensions.deprecated("use new_api")
class Box:
    @typing_extensions.override
    def clone(self) -> typing_extensions.Self:
        ...
