crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_data_class_with_bases.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from dataclasses import dataclass
@dataclass
class Point(Base):
    x: float
