crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_generic_class_and_function.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import TypeVar
from typing import Generic
T = TypeVar("T")
class Box(Base, Generic[T]):
    pass

def first(value: T) -> T:
    return value
