crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_generic_interface.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import TypeVar
from typing import Generic
from typing import Protocol
T = TypeVar("T")
class SupportsClose(Protocol, Generic[T]):
    def close(self, value: T) -> T: ...
