crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_generic_typealias.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import TypeVar
from typing import TypeAlias
T = TypeVar("T")
Pair: TypeAlias = tuple[T, T]
