crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_interface.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import Protocol
class Closable(Protocol):
    def close(self) -> None: ...
