crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_interface_with_bases.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
from typing import Protocol
class SupportsClose(Closable, Protocol):
    def close(self): ...
