crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_lambda_annotation.snap
---
source: crates/typepython_lowering/src/lib.rs
expression: lowered.module.python_source
---
handler = lambda  value      : value + 1
