crates/typepython_lowering/src/snapshots/typepython_lowering__tests__snapshot_lower_module_prologue.snap
---
source: crates/typepython_lowering/src/tests.rs
expression: lowered.module.python_source
---
#!/usr/bin/env python3
# coding: utf-8
"""prologue regression
continued
"""
from __future__ import annotations
from typing import TypeVar
import collections
from typing import Generic
T = TypeVar("T")

class Box(Generic[T]):
    pass
